2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-03-10  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.2.

2010-02-07  Vivek Dasmohapatra  <vivek@etla.org>

	* erc-services.el (erc-nickserv-alist): Fix defcustom type (Bug#5520).

2010-01-25  Vivek Dasmohapatra  <vivek@etla.org>

	* erc-backend.el (erc-session-connector): New var.
	(erc-server-reconnect): Use it to reconnect via old
	connector (Bug#4958).

	* erc.el (erc-determine-parameters):
	Save erc-server-connect-function to erc-session-connector.

2009-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc.el (erc-display-line-1, erc-process-away):
	* erc-truncate.el (erc-truncate-buffer-to-size):
	Use with-current-buffer.

2009-10-24  Glenn Morris  <rgm@gnu.org>

	* erc-dcc.el (pcomplete-erc-all-nicks):
	* erc-notify.el (pcomplete-erc-all-nicks):
	Autoload it, to silence compiler.

	* erc-dcc.el (pcomplete/erc-mode/DCC): Replace cl-function
	remove-duplicates with erc-delete-dups.

2009-09-27  Johan Bockgård  <bojohan@gnu.org>

	* erc-button.el (erc-button-keymap): Bind `follow-link'.

2009-09-26  Johan Bockgård  <bojohan@gnu.org>

	* erc-button.el (erc-button-add-button): Only call
	`widget-convert-button' in XEmacs.  For Emacs (at least), it
	doesn't seem to have any purpose except creating lots of overlays,
	slowing everything down.

2009-09-19  Glenn Morris  <rgm@gnu.org>

	* erc-lang.el (line): Define for compiler.

2009-07-22  Kevin Ryde  <user42@zip.com.au>

	* erc/erc.el (erc-cmd-MODE): Hyperlink urls in docstring with URL `...'.

2009-03-13  D. Goel  <deego3@gmail.com>

	* erc-backend.el: In (multiple-value-bind/setq .. ls),
	ls-> (values-list ls) throughout.
	* erc.el: Ditto.

2009-01-18  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-header-line-uses-tabbar-p): Set to nil by default.

2009-01-16  Glenn Morris  <rgm@gnu.org>

	* erc.el (erc-input-message): Conditionalize previous change for XEmacs.
