@@ -1,3 +1,11 @@
+2010-08-08  Fran Litterio  <flitterio@gmail.com>
+
+	* erc-backend.el (erc-server-filter-function): Call
+	erc-log-irc-protocol.
+
+	* erc.el (erc-toggle-debug-irc-protocol): Bind
+	erc-toggle-debug-irc-protocol to t.
+
 2010-05-07  Chong Yidong  <cyd@stupidchicken.com>
 
 	* Version 23.2 released.
